fix over expanding composer and some white text clipping

--- a/app/assets/stylesheets/mentions.css.scss
+++ b/app/assets/stylesheets/mentions.css.scss
@@ -78,7 +78,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 445px;
+    width: 100%;
     white-space: pre-wrap;
     word-wrap: break-word;
 
